<package format="2">
  <name>subscriber</name>
  <version>1.0.0</version>
  <description>The subscriber package</description>
  <maintainer email="adamkahl8@gmail.com">Adam Kahl</maintainer>
  <license>BSD</license>

  <buildtool_depend>colcon</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
</package>